@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2008, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -177,7 +177,7 @@ public class AODTestRunner {
     }
 
     public static String createApplicationId() {
-        return new Long(System.currentTimeMillis()).toString();
+        return Long.valueOf(System.currentTimeMillis()).toString();
     }
 
     public static void main(String[] args) {
